--- a/content/project/internal-project_VI/indexSeaborn-Exercise.Rmd
+++ b/content/project/internal-project_VI/indexSeaborn-Exercise.Rmd
@@ -409,13 +409,13 @@ plt.xlabel('Age in Years')
 
 
 
-     Text(0.5, 6.79999999999999, 'Age in Years')
+      Text(0.5, 6.79999999999999, 'Age in Years')
 
 
 
 <img src="/img/Seaborn-Exercise_13_1.png" alt="" />
     
-![png](./Seaborn-Exercise_13_1.png)
+#![png](./Seaborn-Exercise_13_1.png)
     
 
 
