--- a/content/project/internal-project_VI/index.Rmd
+++ b/content/project/internal-project_VI/index.Rmd
@@ -22,7 +22,7 @@ This method is popularly known as **Generalized
 ARCH** or **GARCH** model.  
   
 
-
+```{=latex}
 \$\$ \\sigma^2_n = \\omega + \\sum\_{i=1}^p \\alpha_i u^2\_{n-i} +
 \\sum\_{i=1}^q \\beta_i \\sigma^2\_{n-i} \$\$
 
@@ -48,7 +48,7 @@ weighted.
 To model GARCH or the conditional volatility, we need to derive
 \$\\omega\$, \$\\alpha\$, \$\\beta\$ by maximizing the likelihood
 function.
-  
+``` 
 # Required Libraries
 
 
