--- a/content/project/internal_project_V/indexCredit_Approval_Final.Rmd
+++ b/content/project/internal_project_V/indexCredit_Approval_Final.Rmd
@@ -248,7 +248,7 @@ print('\n')
 ```
 
 
-<img src="./img3/Credit_Approval_Final_8_0" alt="" />
+<img src="/img3/Credit_Approval_Final_8_0" alt="" />
 
     
    
